# optimal-sparsity

./: README.md
pre-training/megatron/core/optimizer/: __init__.py  optimizer_config.py
pre-training/megatron/training/: arguments.py  training.py
pre-training/scripts/ckpt/: mcore_to_hf_mixtral.py
scripts/lm-evaluation-harness/: code_eval.sh  math_eval.sh
scripts/post-training/: train.sh
taskloss-eval/: .gitignore  README.md  pyproject.toml
taskloss-eval/.github/workflows/: check.yml
taskloss-eval/datasets/evalplus/: humanevalplus_test.json  mbppplus_test.json
taskloss-eval/datasets/lm-evaluation-harness/: gsm8k_4shot.json
taskloss-eval/scripts/: run_taskloss.py
taskloss-eval/taskloss_eval/: __init__.py  task_loss.py
test-time-compute/job_scripts/abci/: evaluate_gsm8k.sh
test-time-compute/llmonk/: utils.py
test-time-compute/llmonk/evaluate/: countdown_and_plot.py  math_datasets_and_plot.py  math_datasets_and_plot_CoT.py  math_datasets_and_plot_code.py  minif2f.py  plot.py  plot_MATH.py  plot_minif2f.py
test-time-compute/llmonk/evaluate/extract_check/: MATH.py  __init__.py  gsm8k.py
test-time-compute/llmonk/evaluate/rewarding/: __init__.py  countdown.py  gsm8k_grpo_eval.py  gsm8k_math.py  minif2f.py
test-time-compute/llmonk/generate/: MATH_original.py  MATH_original_code.py  MATH_original_local.py  countdown_local.py  gsm8k.py  gsm8k_CoT.py  gsm8k_code_local.py  gsm8k_local.py  minif2f_local.py  prompts.py  vllm_server.py
